<resources>
    <string name="app_name">AirRemote</string>
    <string name="vol_up_str">VOL +</string>
    <string name="vol_down_str">VOL -</string>
    <string name="mute">MUTE</string>
    <string name="tvplus">CH+</string>
    <string name="tvminus">CH-</string>
    <string name="power">POWER</string>
    <string name="planet_prompt">Select a device:</string>
    <string name="select">Select a device:</string>
    <string name="info">To <b>use</b> this app you have to <b>purchase</b> Irdroid module from <a href="http://www.georgibakalski.info">Irdroid website</a> After you purchase a module the app can be used to control your favourite TV or STB. Please tap MENU->UpdateDB to update the database of the supported remotes.</string>


    <string name="quit_info_doubleclick">再按一次退出程序</string>
    <string name="home_tab_list_device">我的家电</string>
	<string name="home_tab_add_device">添加家电</string>
	<string name="home_tab_settings">设置</string>
	<string name="home_tab_help">帮助</string>

    <string name="btn_sel_digit">数字键</string>
    <string name="btn_sel_function">功能键</string>
    <string name="btn_sel_direction">方向键</string>
    <string name="btn_sel_user">自定义按键</string>


    <string name="menu_start">启动服务</string>
    <string name="menu_stop">停止服务</string>
    <string name="menu_devices">连接蓝牙</string>
    <string name="menu_learn">学习遥控码</string>
    <string name="menu_learn_done">遥控码学习完成</string>
    <string name="menu_about">关于</string>
    <string name="menu_exit">退出</string>

</resources>
